plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'pl.allegro.tech.build.axion-release' version '1.15.3'
}

scmVersion {
    tag {
        prefix = ''
    }
    nextVersion {
        suffix = 'SNAPSHOT'
    }
    checks {
        snapshotDependencies.set(false)
    }
}


group = 'com.shingu'
version = scmVersion.version

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
    }
}

dependencies {
    // Spring Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring AI
    implementation(platform("org.springframework.ai:spring-ai-bom:1.0.2"))
    implementation 'org.springframework.ai:spring-ai-markdown-document-reader'
    implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // Configuration
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Database
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // 개발 편의성
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.7'

    // Redis & Cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // XML Processing
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    // HTML Parsing
    implementation 'org.jsoup:jsoup:1.17.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

springBoot {
    mainClass = 'com.shingu.roadmap.RoadMapApplication'
}
